--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "employee-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jonelleadona.github.io/react-employee-tracker-github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "webpack": "^4.44.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+},  "scripts": {
+      "predeploy": "npm run build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
