--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "webpack": "^4.44.2"
-},  "scripts": {
-      "predeploy": "npm run build",
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "deploy": "gh-pages -b master -d build"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
